
= OpenWFEru - ruote-web CHANGELOG.txt


== ruote-web - 0.9.19    not yet released

- todo  #21419 : removed direct dependency on json gem, relying on whatever
                 is present (activesupport or json).
- patch #21338 : better shutdown for Mongrel by Torsten Schoenebaum.
- bug   #21339 : get /processes failed if process 'empty'. Fixed.
- bug   #21305 : replay_at_error was broken for subprocesses. Fixed.
- todo  #20701 : added 'schedules' to /process view
- bug   #20600 : search broken (Densha::Locks). Fixed.
- patch #20601 : issue with search form url on JRuby/Glassfish. Patch by
                 Scott Sproule.
- bug   #20496 : couldn't display graph for process in subprocess. Fixed.


== ruote-web - 0.9.18    2008/05/22

- todo  #20280 : created db/dev_fixtures/ and lib/tasks/populate_dev_db
- todo  #20221 : using the actual process representation for /process and
                 /workitem, not the definition as launched
- todo  #20165 : refactored around filter_fields in the workitem controller
- todo  #20146 : calling workitems() without args yields all workitems 
                 accessible to the user
- todo  #19766 : implemented "delegate" (to store)
- patch #20014 : nil HTTP_REFERER patch by Arjan
- patch #19759 : "last_modified_by" patch by Arjan
- patch #19684 : patch for custom forms (partials) determined by [participant]
                 activity (by Arjan van Bentem)
- todo  #19747 : implement 'pick workitem' as suggested by Arjan van Bentem
- switched to http://github.com/jmettraux/ruote-web
- todo  #19065 : upgraded to Rails 2.0.2 (should be OK with 1.2.6) - s1632


== densha - 0.9.17    released 2007/03/17

- todo  #18794 : implemented special user store (inbox) - s1612
- todo  #18717 : implemented download/upload of exps as yaml - s1602
- todo  #18659 : turned densha-workitem into densha-hash and integrated
                 it into /process/edit - s1584
- todo  #18648 : adapted search to special 'users' store - s1574